k8s/prod-airqo-platform-frontend.yaml
###########################################################
# Start deployment of netmanager frontend - staging
###########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airqo-platform-frontend
  namespace: production
spec:
  selector:
    matchLabels:
      app: airqo-platform
  replicas: 2
  template:
    metadata:
      labels:
        app: airqo-platform
    spec:
      containers:
        - name: airqo-platform
          image: us.gcr.io/airqo-250220/airqo-platform-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: airqo-platform

---
kind: Service
apiVersion: v1
metadata:
  name: airqo-platform-svc
  namespace: production
spec:
  selector:
    app: airqo-platform
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30101
  type: NodePort
