k8s/stage-analytics-frontend.yaml
###########################################################
# Start deployment of analytics fronted staging
###########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airqo-stage-analytics-frontend
  namespace: staging
spec:
  selector:
    matchLabels:
      app: sta-analytics-ui
  replicas: 2
  template:
    metadata:
      labels:
        app: sta-analytics-ui
    spec:
      containers:
        - name: analytics-ui
          image: us.gcr.io/airqo-250220/airqo-stage-analytics-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: analytics-ui

---
kind: Service
apiVersion: v1
metadata:
  name: airqo-stage-analytics-frontend-svc
  namespace: staging
spec:
  selector:
    app: sta-analytics-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 31103
  type: NodePort
